src/main/docker/jaegertracingio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: jaegertracingio
  name: jaegertracingio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jaegertracingio
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/datalogger-net: "true"
        io.kompose.service: jaegertracingio
    spec:
      containers:
        - image: jaegertracing/all-in-one:1.16.0
          name: jaegertracingio
          ports:
            - containerPort: 6831
              protocol: UDP
            - containerPort: 16686
          resources: {}
      restartPolicy: Always
status: {}
