src/main/docker/srvdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: srvdb
  name: srvdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: srvdb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/datalogger-net: "true"
        io.kompose.service: srvdb
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: apirest
            - name: POSTGRES_PASSWORD
              value: apirest
            - name: POSTGRES_USER
              value: apirest
            - name: TZ
              value: America/Guayaquil
          image: postgres
          name: srvdb
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pg-data2
      hostname: srvdb
      restartPolicy: Always
      volumes:
        - name: pg-data2
          persistentVolumeClaim:
            claimName: pg-data2
status: {}
