src/main/docker/srvfrontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: srvfrontend
  name: srvfrontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: srvfrontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/datalogger-net: "true"
        io.kompose.service: srvfrontend
    spec:
      containers:
        - image: jorgepizarro92/frontangular
          name: srvfrontend
          ports:
            - containerPort: 80
            - containerPort: 443
          resources: {}
      hostname: srvfrontend
      restartPolicy: Always
status: {}
