src/main/docker/srvwildfly-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: srvwildfly
  name: srvwildfly
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: srvwildfly
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.network/datalogger-net: "true"
        io.kompose.service: srvwildfly
    spec:
      containers:
        - args:
            - /opt/jboss/wildfly/bin/standalone.sh
            - -b
            - 0.0.0.0
            - -c
            - standalone.xml
            - -bmanagement
            - 0.0.0.0
            - --debug
            - '*:8787'
          image: jorgepizarro92/appweb
          name: srvwildfly
          ports:
            - containerPort: 8080
            - containerPort: 8009
            - containerPort: 9990
            - containerPort: 8787
          resources: {}
      hostname: srvwildfly
      restartPolicy: Always
status: {}
