src/main/docker/srvfrontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: srvfrontend
  name: srvfrontend
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 80
    - name: "444"
      port: 444
      targetPort: 443
  selector:
    io.kompose.service: srvfrontend
status:
  loadBalancer: {}
