src/main/docker/datalogger-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: datalogger-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/datalogger-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/datalogger-net: "true"
